[gd_scene load_steps=7 format=3 uid="uid://cvymyomjcu0sh"]

[ext_resource type="Script" path="res://Scene/Test.gd" id="1_rks7f"]
[ext_resource type="Texture2D" uid="uid://c0gkphgn3vpjm" path="res://Placeholders/AguaOxigenada.png" id="2_8rgik"]
[ext_resource type="Texture2D" uid="uid://b80pl2ftakxnb" path="res://Placeholders/PurpleDust.png" id="2_gmlaj"]
[ext_resource type="Texture2D" uid="uid://c20mehjqrcylg" path="res://Placeholders/Hidróxido de Sódio.png" id="3_h6eq1"]
[ext_resource type="Texture2D" uid="uid://boc8pif47ie8c" path="res://Placeholders/GlicoseDissolvidaEmLiquido.png" id="4_d13us"]
[ext_resource type="Texture2D" uid="uid://fo3i76mmjim2" path="res://Placeholders/IodetoDePotassio.png" id="6_445wo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rks7f")

[node name="h2o2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 200.0
offset_right = 1008.0
offset_bottom = 360.0
tooltip_text = "Água Oxigenada"
texture_normal = ExtResource("2_8rgik")
texture_pressed = ExtResource("2_8rgik")
texture_hover = ExtResource("2_8rgik")
stretch_mode = 0

[node name="NaOH" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 360.0
offset_right = 976.0
offset_bottom = 516.0
tooltip_text = "SODA CAUSTICA DISSOLVIDA EM AGUA"
texture_normal = ExtResource("3_h6eq1")
ignore_texture_size = true
stretch_mode = 0

[node name="c6h12o6" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 368.0
offset_right = 862.0
offset_bottom = 520.0
tooltip_text = "GLICOSE DISSOLVIDA EM ÁGUA"
texture_normal = ExtResource("4_d13us")
ignore_texture_size = true
stretch_mode = 0

[node name="BlueDust" type="TextureButton" parent="."]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 568.0
offset_top = 352.0
offset_right = 732.0
offset_bottom = 536.0
texture_normal = ExtResource("2_gmlaj")
ignore_texture_size = true
stretch_mode = 0

[node name="kl" type="TextureButton" parent="."]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 704.0
offset_top = 184.0
offset_right = 868.0
offset_bottom = 368.0
tooltip_text = "Iodeto de Potassio
"
texture_normal = ExtResource("6_445wo")
ignore_texture_size = true
stretch_mode = 0

[node name="emptyBottom" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 304.0
offset_right = 446.0
offset_bottom = 391.0

[node name="emptyMiddle" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 216.0
offset_right = 446.0
offset_bottom = 303.0
color = Color(0.454902, 0.662745, 0.698039, 1)

[node name="fire" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 408.0
offset_right = 408.0
offset_bottom = 448.0

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 264.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 30
text = "LIMPAR"

[node name="Mix" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 456.0
offset_right = 287.0
offset_bottom = 513.0
theme_override_font_sizes/font_size = 35
text = "MISTURAR"

[node name="Result" type="Label" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 56.0
offset_right = 859.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 25
text = "RESULT"

[node name="fogoLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 640.0
offset_top = 536.0
offset_right = 958.0
offset_bottom = 581.0
theme_override_font_sizes/font_size = 30
text = "O FOGO ESTÁ LIGADO"

[node name="Fogão" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 528.0
offset_right = 288.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 35
text = "FOGÃO"

[connection signal="pressed" from="h2o2" to="." method="_on_h_2o_2_pressed"]
[connection signal="pressed" from="NaOH" to="." method="_on_green_dust_pressed"]
[connection signal="pressed" from="c6h12o6" to="." method="_on_purple_dust_pressed"]
[connection signal="pressed" from="BlueDust" to="." method="_on_blue_dust_pressed"]
[connection signal="pressed" from="kl" to="." method="_on_orange_dust_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Mix" to="." method="_on_mix_pressed"]
[connection signal="pressed" from="Fogão" to="." method="_on_fogão_pressed"]
